# Projects

./: .gitignore  README.md  Streaming Now.pptx  build.gradle  settings.gradle
DevEnvironmentCLion/Base/: BaseException.h  CMakeLists.txt  NotImplementedException.h  WindowsException.h
DevEnvironmentCLion/Base/core/: AbstractPathBuilder.cpp  AbstractPathBuilder.h  AndBitOperator.cpp  AndBitOperator.h  BaseDependencies.h  BaseLogic.h  Bits.cpp  Bits.h  ClassType.cpp  ClassType.h  ClassTypes.h  CollectionComparator.h  Collections.cpp  Collections.h  ComparableComparator.h  Comparator.h  ComparatorFactory.h  CompareToBuilder.cpp  CompareToBuilder.h  ConsoleColorSetter.cpp  ConsoleColorSetter.h  Conversion.cpp  Conversion.h  DateTime.cpp  DateTime.h  DereferenceComparableComparator.h  DereferenceComparableComparator2.h  DereferenceEquatableComparator.h  DereferenceEquatableComparator2.h  Duration.h  EqualBuilder.cpp  EqualBuilder.h  EquatableComparator.h  Indexes.cpp  Indexes.h  IntegerConversion.cpp  IntegerConversion.h  Interval.h  IntervalMap.h  IntervalMapIterator.h  (+75 more)
DevEnvironmentCLion/Base/interfaces/: ClassTypes.h  ColorType.h  ComparatorFactory.h  CompareToBuilder.h  DateTime.h  Dimensions.h  Duration.h  EqualBuilder.h  IBinaryBitOperator.h  IBinaryComparator.h  IBitOperator.h  IBuilder.h  ICalculator.h  IClassType.h  ICollection.h  IComparableComparator.h  IConsoleColorHandler.h  IEquatableComparator.h  IFinder.h  IFromString.h  IHashCodeProvider.h  IIntegerConversion.h  IIntervalMap.h  IIterable.h  IIterator.h  IKeyIterable.h  IKeyReverseIterable.h  IList.h  ILog.h  ILogFactory.h  IMainParser.h  IMatch.h  IMatrix.h  IMessageWriter.h  IParser.h  IParsingResult.h  IPathBuilder.h  IRandomGenerator.h  IResourceReader.h  IReverseIterable.h  (+33 more)
DevEnvironmentCLion/BaseCommand/: CMakeLists.txt  main.cpp
DevEnvironmentCLion/BaseCommand/core/: PreCompiled.h
DevEnvironmentCLion/BaseTest/: CMakeLists.txt  main.cpp
DevEnvironmentCLion/BaseTest/core/: IntervalMapUnitTest.cpp  KmpStringSearchUnitTest.cpp  ListUnitTest.cpp  MatrixUnitTest.cpp  PreCompiled.h  RandomGeneratorUnitTest.cpp  StringsUnitTest.cpp  TestData.cpp  TwoDimensionalListUnitTest.cpp  TwoDimensionalVectorUnitTest.cpp
DevEnvironmentCLion/BaseTest/interfaces/: IntervalMapUnitTest.h  KmpStringSearchUnitTest.h  ListUnitTest.h  MatrixUnitTest.h  RandomGeneratorUnitTest.h  StringsUnitTest.h  TestData.h  TwoDimensionalListUnitTest.h  TwoDimensionalVectorUnitTest.h
DevEnvironmentCLion/CANMessageGenerator/: CANMessageGeneratorException.h  CMakeLists.txt  JitterMessageHandlerException.h
DevEnvironmentCLion/CANMessageGenerator/core/: CANMessageId.cpp  CANMessageId.h  CANMessageName.cpp  CANMessageName.h  CANMessageRule.cpp  CANMessageRule.h  CANMessageRuleGenerator.cpp  CANMessageRuleGenerator.h  CANRuleGenerator.cpp  CANRuleGenerator.h  CANSignalRule.cpp  CANSignalRule.h  CANSignalRuleGenerator.cpp  CANSignalRuleGenerator.h  JitterMessageData.cpp  JitterMessageData.h  JitterMessageHandler.cpp  JitterMessageHandler.h  PreCompiled.h
DevEnvironmentCLion/CANMessageGenerator/interfaces/: ICANMessageId.h  ICANMessageName.h  ICANMessageRule.h  ICANRule.h  ICANRuleGenerator.h  ICANSignalRule.h  IJitterMessageData.h  IJitterMessageHandler.h  IteratorOfIteratorCollection.h
DevEnvironmentCLion/CANMessageGeneratorCommand/: CANMessageGeneratorCommandException.h  CMakeLists.txt  main.cpp
DevEnvironmentCLion/CANMessageGeneratorCommand/core/: CANMessageGeneratorCommand.cpp  CANMessageGeneratorCommand.h  CANMessageGeneratorCommandParameters.cpp  CANMessageGeneratorCommandParameters.h
DevEnvironmentCLion/CANMessageGeneratorCommand/interfaces/: ICANMessageGeneratorCommandParameters.h
DevEnvironmentCLion/Concurrency/: CMakeLists.txt  ConcurrencyException.h
DevEnvironmentCLion/Concurrency/core/: PreCompiled.h
DevEnvironmentCLion/Concurrency/interfaces/: ConcurrentQueue.h
DevEnvironmentCLion/DataStructures/: CMakeLists.txt  DataStructureException.h
DevEnvironmentCLion/DataStructures/binarytree/: BinaryTreeException.h
DevEnvironmentCLion/DataStructures/bitarray/: BitArrayException.h
DevEnvironmentCLion/DataStructures/cache/: CacheException.h
DevEnvironmentCLion/DataStructures/core/: IteratorOfIteratorCollection.h  PreCompiled.h
DevEnvironmentCLion/DataStructures/doublylinkedlist/: DoublyLinkedListException.h
DevEnvironmentCLion/DataStructures/graph/: GraphException.h
DevEnvironmentCLion/DataStructures/interfaces/: IteratorOfIteratorCollection.h
DevEnvironmentCLion/DataStructures/linkedlist/: LinkedListException.h
DevEnvironmentCLion/DataStructures/node/: NodeException.h
DevEnvironmentCLion/DataStructures/priorityqueue/: PriorityQueueException.h
DevEnvironmentCLion/DataStructuresTest/: CMakeLists.txt  main.cpp
DevEnvironmentCLion/DataStructuresTest/core/: IteratorOfIteratorCollectionUnitTest.cpp  PreCompiled.h  TestData.cpp
DevEnvironmentCLion/DataStructuresTest/interfaces/: IteratorOfIteratorCollectionUnitTest.h  TestData.h
DevEnvironmentCLion/MemoryCommand/: CMakeLists.txt  main.cpp
DevEnvironmentCLion/MemoryCommand/core/: PreCompiled.h
DevEnvironmentCLion/MemoryManagement/: CMakeLists.txt  MemoryManagementException.h
DevEnvironmentCLion/MemoryManagementTest/: CMakeLists.txt  main.cpp
DevEnvironmentCLion/Problems/: CMakeLists.txt  ProblemException.h
DevEnvironmentCLion/ProblemsTest/: CMakeLists.txt  main.cpp
DevEnvironmentCLion/TestBase/: CMakeLists.txt  TestBaseException.h
DevEnvironmentCLion/UnitTesting/: CMakeLists.txt  UnitTestingException.h
MemoryManagement/MemoryCommand/: CMakeLists.txt  main.cpp
MemoryManagement/MemoryManagement/: CMakeLists.txt  MemoryManagementException.h
SystemCore/Base/: CMakeLists.txt
SystemCore/ConsoleFileFinder/: CMakeLists.txt  ConsoleFileFinder.md  main.cpp
SystemCore/ConsoleHelper/: CMakeLists.txt  main.cpp
SystemCore/DataStructuresTest/: CMakeLists.txt  main.cpp
SystemCore/Logging/: CMakeLists.txt
SystemCore/MemoryManagement/: CMakeLists.txt  MemoryManagementException.h
SystemCore/MemoryManagementTest/: CMakeLists.txt  main.cpp
(+3111 files in other folders)
